Add tab framework and initial test

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,12 @@
 add_library(waterer)
 
-target_sources(waterer PUBLIC Display.cc)
+target_sources(waterer PUBLIC
+#
+presenter/Presenter.cc
+#
+view/Display.cc view/Keys.cc view/Key.cc view/TabBase.cc view/CurrentTimeTab.cc )
+
+target_link_libraries(
+  waterer
+  GTest::gmock_main
+)
