--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,9 @@
     "cmake.buildDirectory": "${workspaceFolder}/build",
     "cmake.ctestArgs": [
         "--test-dir",
-        "${workspaceFolder}/build/test"
+        "${workspaceFolder}/build/tests"
     ],
+    "C_Cpp.default.compileCommands": "${workspaceFolder}/build/compile_commands.json",
     "files.associations": {
         "Makefile.*": "makefile",
         "ostream": "cpp",
