--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,15 +1,10 @@
 {
     "tasks": [
         {
-            "type": "cmake",
-            "label": "CMake: test",
-            "command": "test",
-            "problemMatcher": [],
-            "detail": "CMake template test task",
-            "group": {
-                "kind": "test",
-                "isDefault": true
-            }
+            "label": "gtest",
+            "type": "shell",
+            "command": "${workspaceFolder}/build/test/test_runner",
+            "problemMatcher": []
         }
     ]
 }
