--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,20 @@ cmake_minimum_required(VERSION 3.22)
 project(waterer VERSION 3.22)
 
 set(CMAKE_CXX_STANDARD 14)
+add_compile_options(-Wall -Wextra -pedantic -Werror)
 
+# third party libs
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+# project
 
 add_subdirectory(src)
-add_subdirectory(test)
+add_subdirectory(tests)
