Add a few more tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,11 @@ add_library(waterer)
 
 target_sources(waterer PUBLIC
 #
+model/FBSettings.cc
+#
 presenter/Presenter.cc
 #
-view/Display.cc view/Keys.cc view/Key.cc view/TabBase.cc view/CurrentTimeTab.cc )
+view/Display.cc view/Keys.cc view/Key.cc view/TabBase.cc  view/CurrentTimeTab.cc view/FBHourTab.cc )
 
 target_link_libraries(
   waterer
