--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,7 @@ model/FBSettings.cpp
 #
 presenter/Presenter.cpp
 #
-view/Display.cpp view/DisplayKeys.cpp view/Key.cpp view/TabBase.cpp  view/CurrentTimeTab.cpp view/FBHourTab.cpp )
+view/Display.cpp view/DisplayKeys.cpp view/Key.cpp view/TabBase.cpp  view/CurrentTimeTab.cpp view/FBHourTab.cpp view/Application.cpp )
 
 target_link_libraries(
   waterer
