--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,15 +6,24 @@ project(waterer VERSION 3.22)
 set(CMAKE_CXX_STANDARD 14)
 add_compile_options(-Wall -Wextra -pedantic -Werror)
 
+add_definitions(-DARDUINO_TESTING)
+add_compile_definitions(ARDUINO_TESTING)
+
 # third party libs
 
 include(FetchContent)
+
+# cmake-lint: disable=C0301
 FetchContent_Declare(
   googletest
   URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
 )
 # For Windows: Prevent overriding the parent project's compiler/linker settings
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+# cmake-lint: disable=C0103
+set(gtest_force_shared_crt
+    ON
+    CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
 # project
