--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,7 @@ target_sources(
          view/CurrentTimeTab.cpp
          view/FBHourTab.cpp
          view/FBHumidityTab.cpp
-         view/Application.cpp)
+         view/Application.cpp
+         view/Helpers.cpp)
 
 target_link_libraries(waterer GTest::gmock_main)
