frontend seems happy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,5 +70,6 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "fstream": "cpp"
-    }
+    },
+    "python.formatting.blackPath": "${workspaceFolder}/backend/.venv/bin/black"
 }
