--- a/embedded/tests/CMakeLists.txt
+++ b/embedded/tests/CMakeLists.txt
@@ -1,8 +1,9 @@
 enable_testing()
 
 add_executable(
-  test_runner ./view/display_test.cpp ./view/key_test.cpp
-              ./view/current_time_tab_test.cpp ./view/formatting_test.cpp)
+  test_runner
+  ./model/feedback_runner_test.cpp ./view/display_test.cpp ./view/key_test.cpp
+  ./view/current_time_tab_test.cpp ./view/formatting_test.cpp)
 target_link_libraries(test_runner waterer GTest::gtest_main GTest::gmock_main)
 
 include(GoogleTest)
