--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ build/
 backend/waterer_backend/history/pump_history.json
 launch_backend.sh
 launch_frontend.sh
+frontend/dist/
+frontend/src/env.js
